--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,9 @@
     background-color: #512DA8;
 
 }
+.tab-content{
+    border-right:1px solid #DDDD;
+    border-left:1px solid #DDDD;
+    border-bottom:1px solid #DDDD;
+    padding:10px;
+}
